Correlation Matrix and Histogram Distibutiouns

--- a/Code/Data_Analysis/correlationMatrix.ipynb
+++ b/Code/Data_Analysis/correlationMatrix.ipynb
@@ -39,26 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0      1\n",
-      "1      1\n",
-      "2      1\n",
-      "3      1\n",
-      "4      1\n",
-      "      ..\n",
-      "564    1\n",
-      "565    1\n",
-      "566    1\n",
-      "567    1\n",
-      "568    0\n",
-      "Name: Diagnosis, Length: 569, dtype: int64\n",
       "Correlation Matrix Size: (32, 32)\n",
+      "Number of Entries: 1024\n",
       "Correlations Over 90: 74\n",
       "Correlations Over 80: 120\n"
      ]
@@ -88,260 +77,12 @@
     "            numbersAbove80 += 1\n",
     "\n",
     "print('Correlation Matrix Size: {}'.format(corrMatrix.shape))\n",
-    "print('Number of Entries: {}'.format())\n",
+    "print('Number of Entries: {}'.format(corrMatrix.shape[0] * corrMatrix.shape[1]))\n",
     "print('Correlations Over 90: {}'.format(numbersAbove90))\n",
     "print('Correlations Over 80: {}'.format(numbersAbove80))\n",
     "sn.heatmap(corrMatrix)\n",
     "plt.rcParams[\"figure.figsize\"] = (18, 16)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                 ID        radius       texture     perimeter  \\\n",
-      "ID                     1.563015e+16  3.287883e+07  5.364807e+07  2.222490e+08   \n",
-      "radius                 3.287883e+07  1.241892e+01  4.907582e+00  8.544714e+01   \n",
-      "texture                5.364807e+07  4.907582e+00  1.849891e+01  3.443976e+01   \n",
-      "perimeter              2.222490e+08  8.544714e+01  3.443976e+01  5.904405e+02   \n",
-      "area                   4.262946e+09  1.224483e+03  4.859938e+02  8.435772e+03   \n",
-      "smoothness            -2.280205e+04  8.454460e-03 -1.414779e-03  7.083607e-02   \n",
-      "compactness            6.318839e+02  9.419706e-02  5.376681e-02  7.147141e-01   \n",
-      "concavity              4.991277e+05  1.901276e-01  1.036923e-01  1.387234e+00   \n",
-      "concave_points         2.142177e+05  1.124751e-01  4.897693e-02  8.023604e-01   \n",
-      "symmetry              -7.579262e+04  1.427317e-02  8.418876e-03  1.219216e-01   \n",
-      "fractal_dimension     -4.635137e+04 -7.753706e-03 -2.321158e-03 -4.485888e-02   \n",
-      "radius_SE              4.959431e+06  6.636503e-01  3.290374e-01  4.661401e+00   \n",
-      "texture_SE            -5.190618e+05 -1.891886e-01  9.166951e-01 -1.162988e+00   \n",
-      "perimeter_SE           3.471365e+07  4.803550e+00  2.449449e+00  3.405303e+01   \n",
-      "area_SE                1.010874e+09  1.179682e+02  5.084087e+01  8.234928e+02   \n",
-      "smoothness_SE          3.632916e+04 -2.355336e-03  8.540990e-05 -1.478818e-02   \n",
-      "compactness_SE         7.603492e+04  1.300051e-02  1.478660e-02  1.091112e-01   \n",
-      "concavity_SE           2.084665e+05  2.065883e-02  1.860393e-02  1.672962e-01   \n",
-      "concave_points_SE      6.076269e+04  8.179563e-03  4.348380e-03  6.105470e-02   \n",
-      "symmetry_SE           -1.788548e+04 -3.038982e-03  3.245070e-04 -1.639643e-02   \n",
-      "fractal_dimension_SE   8.510281e+03 -3.976249e-04  6.197726e-04 -3.551365e-04   \n",
-      "radius_MAX             4.979381e+07  1.651375e+01  7.329267e+00  1.138581e+02   \n",
-      "texture_MAX            4.973106e+07  6.433100e+00  2.411015e+01  4.525811e+01   \n",
-      "perimeter_MAX          3.360214e+08  1.142886e+02  5.174593e+01  7.923282e+02   \n",
-      "area_MAX               7.629681e+09  1.888227e+03  8.412838e+02  1.302615e+04   \n",
-      "smoothness_MAX         2.951016e+04  9.624625e-03  7.611070e-03  8.352553e-02   \n",
-      "compactness_MAX       -5.838341e+04  2.292492e-01  1.880100e-01  1.742478e+00   \n",
-      "concavity_MAX          6.051816e+05  3.873864e-01  2.701101e-01  2.858506e+00   \n",
-      "concave_points_MAX     2.890528e+05  1.723927e-01  8.349085e-02  1.231848e+00   \n",
-      "symmetry_MAX          -3.420616e+05  3.574576e-02  2.794199e-02  2.842997e-01   \n",
-      "fractal_dimension_MAX -6.743751e+04  4.497351e-04  9.260129e-03  2.239052e-02   \n",
-      "\n",
-      "                               area    smoothness  compactness      concavity  \\\n",
-      "ID                     4.262946e+09 -22802.053383   631.883924  499127.721282   \n",
-      "radius                 1.224483e+03      0.008454     0.094197       0.190128   \n",
-      "texture                4.859938e+02     -0.001415     0.053767       0.103692   \n",
-      "perimeter              8.435772e+03      0.070836     0.714714       1.387234   \n",
-      "area                   1.238436e+05      0.876178     9.264931      19.244924   \n",
-      "smoothness             8.761781e-01      0.000198     0.000490       0.000585   \n",
-      "compactness            9.264931e+00      0.000490     0.002789       0.003718   \n",
-      "concavity              1.924492e+01      0.000585     0.003718       0.006355   \n",
-      "concave_points         1.124196e+01      0.000302     0.001703       0.002850   \n",
-      "symmetry               1.459596e+00      0.000215     0.000873       0.001094   \n",
-      "fractal_dimension     -7.034264e-01      0.000058     0.000211       0.000190   \n",
-      "radius_SE              7.149094e+01      0.001176     0.007286       0.013970   \n",
-      "texture_SE            -1.286717e+01      0.000531     0.001346       0.003352   \n",
-      "perimeter_SE           5.170100e+02      0.008420     0.058612       0.106443   \n",
-      "area_SE                1.280852e+04      0.157742     1.094708       2.239119   \n",
-      "smoothness_SE         -1.762210e-01      0.000014     0.000021       0.000024   \n",
-      "compactness_SE         1.339725e+00      0.000080     0.000699       0.000957   \n",
-      "concavity_SE           2.205952e+00      0.000105     0.000910       0.001663   \n",
-      "concave_points_SE      8.084602e-01      0.000033     0.000209       0.000336   \n",
-      "symmetry_SE           -2.108964e-01      0.000023     0.000100       0.000117   \n",
-      "fractal_dimension_SE  -1.851854e-02      0.000011     0.000071       0.000095   \n",
-      "radius_MAX             1.637521e+03      0.014487     0.136643       0.265181   \n",
-      "texture_MAX            6.218249e+02      0.003118     0.080544       0.146934   \n",
-      "perimeter_MAX          1.134179e+04      0.112879     1.047413       1.954350   \n",
-      "area_MAX               1.921926e+05      1.655299    15.323436      30.682405   \n",
-      "smoothness_MAX         9.925135e-01      0.000259     0.000682       0.000817   \n",
-      "compactness_MAX        2.161660e+01      0.001045     0.007194       0.009469   \n",
-      "concavity_MAX          3.763442e+01      0.001276     0.008994       0.014704   \n",
-      "concave_points_MAX     1.670179e+01      0.000465     0.002831       0.004513   \n",
-      "symmetry_MAX           3.125809e+00      0.000343     0.001667       0.002020   \n",
-      "fractal_dimension_MAX  2.375623e-02      0.000127     0.000656       0.000741   \n",
-      "\n",
-      "                       concave_points      symmetry  ...    radius_MAX  \\\n",
-      "ID                      214217.739286 -75792.615857  ...  4.979381e+07   \n",
-      "radius                       0.112475      0.014273  ...  1.651375e+01   \n",
-      "texture                      0.048977      0.008419  ...  7.329267e+00   \n",
-      "perimeter                    0.802360      0.121922  ...  1.138581e+02   \n",
-      "area                        11.241958      1.459596  ...  1.637521e+03   \n",
-      "smoothness                   0.000302      0.000215  ...  1.448691e-02   \n",
-      "compactness                  0.001703      0.000873  ...  1.366429e-01   \n",
-      "concavity                    0.002850      0.001094  ...  2.651810e-01   \n",
-      "concave_points               0.001506      0.000492  ...  1.557207e-01   \n",
-      "symmetry                     0.000492      0.000752  ...  2.460890e-02   \n",
-      "fractal_dimension            0.000046      0.000093  ... -8.657080e-03   \n",
-      "radius_SE                    0.007511      0.002306  ...  9.584158e-01   \n",
-      "texture_SE                   0.000460      0.001937  ... -2.977943e-01   \n",
-      "perimeter_SE                 0.055753      0.017398  ...  6.813122e+00   \n",
-      "area_SE                      1.218501      0.279314  ...  1.665229e+02   \n",
-      "smoothness_SE                0.000003      0.000015  ... -3.347759e-03   \n",
-      "compactness_SE               0.000341      0.000207  ...  1.770968e-02   \n",
-      "concavity_SE                 0.000514      0.000284  ...  2.726857e-02   \n",
-      "concave_points_SE            0.000147      0.000067  ...  1.068023e-02   \n",
-      "symmetry_SE                  0.000031      0.000102  ... -5.118857e-03   \n",
-      "fractal_dimension_SE         0.000026      0.000024  ... -4.794329e-04   \n",
-      "radius_MAX                   0.155721      0.024609  ...  2.336022e+01   \n",
-      "texture_MAX                  0.069819      0.015274  ...  1.069193e+01   \n",
-      "perimeter_MAX                1.116016      0.201896  ...  1.613873e+02   \n",
-      "area_MAX                    17.886881      2.765725  ...  2.707851e+03   \n",
-      "smoothness_MAX               0.000401      0.000267  ...  2.389999e-02   \n",
-      "compactness_MAX              0.004075      0.002041  ...  3.618351e-01   \n",
-      "concavity_MAX                0.006091      0.002481  ...  5.787568e-01   \n",
-      "concave_points_MAX           0.002321      0.000775  ...  2.501648e-01   \n",
-      "symmetry_MAX                 0.000902      0.001187  ...  7.282020e-02   \n",
-      "fractal_dimension_MAX        0.000258      0.000217  ...  8.161333e-03   \n",
-      "\n",
-      "                        texture_MAX  perimeter_MAX      area_MAX  \\\n",
-      "ID                     4.973106e+07   3.360214e+08  7.629681e+09   \n",
-      "radius                 6.433100e+00   1.142886e+02  1.888227e+03   \n",
-      "texture                2.411015e+01   5.174593e+01  8.412838e+02   \n",
-      "perimeter              4.525811e+01   7.923282e+02  1.302615e+04   \n",
-      "area                   6.218249e+02   1.134179e+04  1.921926e+05   \n",
-      "smoothness             3.118110e-03   1.128795e-01  1.655299e+00   \n",
-      "compactness            8.054412e-02   1.047413e+00  1.532344e+01   \n",
-      "concavity              1.469342e-01   1.954350e+00  3.068241e+01   \n",
-      "concave_points         6.981902e-02   1.116016e+00  1.788688e+01   \n",
-      "symmetry               1.527421e-02   2.018958e-01  2.765725e+00   \n",
-      "fractal_dimension     -2.224817e-03  -4.867133e-02 -9.320240e-01   \n",
-      "radius_SE              3.320216e-01   6.706311e+00  1.186619e+02   \n",
-      "texture_SE             1.386754e+00  -1.895237e+00 -2.613029e+01   \n",
-      "perimeter_SE           2.489976e+00   4.898647e+01  8.411654e+02   \n",
-      "area_SE                5.494035e+01   1.163600e+03  2.101597e+04   \n",
-      "smoothness_SE         -1.379325e-03  -2.192426e-02 -3.114640e-01   \n",
-      "compactness_SE         1.574005e-02   1.567681e-01  2.032819e+00   \n",
-      "concavity_SE           1.859784e-02   2.299284e-01  3.237150e+00   \n",
-      "concave_points_SE      3.289588e-03   8.189807e-02  1.202431e+00   \n",
-      "symmetry_SE           -3.936211e-03  -2.881960e-02 -5.193299e-01   \n",
-      "fractal_dimension_SE  -5.196214e-05  -8.895007e-05 -3.425335e-02   \n",
-      "radius_MAX             1.069193e+01   1.613873e+02  2.707851e+03   \n",
-      "texture_MAX            3.777648e+01   7.540370e+01  1.210246e+03   \n",
-      "perimeter_MAX          7.540370e+01   1.129131e+03  1.870287e+04   \n",
-      "area_MAX               1.210246e+03   1.870287e+04  3.241674e+05   \n",
-      "smoothness_MAX         3.163541e-02   1.816600e-01  2.718848e+00   \n",
-      "compactness_MAX        3.489359e-01   2.798929e+00  3.926286e+01   \n",
-      "concavity_MAX          4.723400e-01   4.334781e+00  6.453772e+01   \n",
-      "concave_points_MAX     1.453437e-01   1.803071e+00  2.797227e+01   \n",
-      "symmetry_MAX           8.860948e-02   5.602496e-01  7.367083e+00   \n",
-      "fractal_dimension_MAX  2.432461e-02   8.433354e-02  8.190351e-01   \n",
-      "\n",
-      "                       smoothness_MAX  compactness_MAX  concavity_MAX  \\\n",
-      "ID                       29510.163781    -58383.413342  605181.617857   \n",
-      "radius                       0.009625         0.229249       0.387386   \n",
-      "texture                      0.007611         0.188010       0.270110   \n",
-      "perimeter                    0.083526         1.742478       2.858506   \n",
-      "area                         0.992514        21.616602      37.634415   \n",
-      "smoothness                   0.000259         0.001045       0.001276   \n",
-      "compactness                  0.000682         0.007194       0.008994   \n",
-      "concavity                    0.000817         0.009469       0.014704   \n",
-      "concave_points               0.000401         0.004075       0.006091   \n",
-      "symmetry                     0.000267         0.002041       0.002481   \n",
-      "fractal_dimension            0.000081         0.000510       0.000510   \n",
-      "radius_SE                    0.000899         0.012527       0.022018   \n",
-      "texture_SE                  -0.000928        -0.008023      -0.007936   \n",
-      "perimeter_SE                 0.006004         0.108769       0.176695   \n",
-      "area_SE                      0.130238         2.027379       3.654804   \n",
-      "smoothness_SE                0.000022        -0.000026      -0.000037   \n",
-      "compactness_SE               0.000093         0.001913       0.002388   \n",
-      "concavity_SE                 0.000116         0.002303       0.004173   \n",
-      "concave_points_SE            0.000030         0.000440       0.000707   \n",
-      "symmetry_SE                 -0.000002         0.000078       0.000064   \n",
-      "fractal_dimension_SE         0.000010         0.000162       0.000210   \n",
-      "radius_MAX                   0.023900         0.361835       0.578757   \n",
-      "texture_MAX                  0.031635         0.348936       0.472340   \n",
-      "perimeter_MAX                0.181660         2.798929       4.334781   \n",
-      "area_MAX                     2.718848        39.262857      64.537720   \n",
-      "smoothness_MAX               0.000521         0.002041       0.002470   \n",
-      "compactness_MAX              0.002041         0.024755       0.029288   \n",
-      "concavity_MAX                0.002470         0.029288       0.043524   \n",
-      "concave_points_MAX           0.000822         0.008285       0.011731   \n",
-      "symmetry_MAX                 0.000698         0.005981       0.006873   \n",
-      "fractal_dimension_MAX        0.000255         0.002303       0.002587   \n",
-      "\n",
-      "                       concave_points_MAX   symmetry_MAX  \\\n",
-      "ID                          289052.809853 -342061.639212   \n",
-      "radius                           0.172393       0.035746   \n",
-      "texture                          0.083491       0.027942   \n",
-      "perimeter                        1.231848       0.284300   \n",
-      "area                            16.701789       3.125809   \n",
-      "smoothness                       0.000465       0.000343   \n",
-      "compactness                      0.002831       0.001667   \n",
-      "concavity                        0.004513       0.002020   \n",
-      "concave_points                   0.002321       0.000902   \n",
-      "symmetry                         0.000775       0.001187   \n",
-      "fractal_dimension                0.000081       0.000146   \n",
-      "radius_SE                        0.009680       0.001622   \n",
-      "texture_SE                      -0.004338      -0.004376   \n",
-      "perimeter_SE                     0.073747       0.013751   \n",
-      "area_SE                          1.609241       0.208622   \n",
-      "smoothness_SE                   -0.000020      -0.000020   \n",
-      "compactness_SE                   0.000569       0.000308   \n",
-      "concavity_SE                     0.000874       0.000369   \n",
-      "concave_points_SE                0.000244       0.000055   \n",
-      "symmetry_SE                     -0.000017       0.000199   \n",
-      "fractal_dimension_SE             0.000037       0.000018   \n",
-      "radius_MAX                       0.250165       0.072820   \n",
-      "texture_MAX                      0.145344       0.088609   \n",
-      "perimeter_MAX                    1.803071       0.560250   \n",
-      "area_MAX                        27.972274       7.367083   \n",
-      "smoothness_MAX                   0.000822       0.000698   \n",
-      "compactness_MAX                  0.008285       0.005981   \n",
-      "concavity_MAX                    0.011731       0.006873   \n",
-      "concave_points_MAX               0.004321       0.002044   \n",
-      "symmetry_MAX                     0.002044       0.003828   \n",
-      "fractal_dimension_MAX            0.000607       0.000601   \n",
-      "\n",
-      "                       fractal_dimension_MAX  \n",
-      "ID                             -67437.508622  \n",
-      "radius                              0.000450  \n",
-      "texture                             0.009260  \n",
-      "perimeter                           0.022391  \n",
-      "area                                0.023756  \n",
-      "smoothness                          0.000127  \n",
-      "compactness                         0.000656  \n",
-      "concavity                           0.000741  \n",
-      "concave_points                      0.000258  \n",
-      "symmetry                            0.000217  \n",
-      "fractal_dimension                   0.000098  \n",
-      "radius_SE                           0.000248  \n",
-      "texture_SE                         -0.000455  \n",
-      "perimeter_SE                        0.003120  \n",
-      "area_SE                             0.014411  \n",
-      "smoothness_SE                       0.000006  \n",
-      "compactness_SE                      0.000191  \n",
-      "concavity_SE                        0.000240  \n",
-      "concave_points_SE                   0.000035  \n",
-      "symmetry_SE                         0.000012  \n",
-      "fractal_dimension_SE                0.000028  \n",
-      "radius_MAX                          0.008161  \n",
-      "texture_MAX                         0.024325  \n",
-      "perimeter_MAX                       0.084334  \n",
-      "area_MAX                            0.819035  \n",
-      "smoothness_MAX                      0.000255  \n",
-      "compactness_MAX                     0.002303  \n",
-      "concavity_MAX                       0.002587  \n",
-      "concave_points_MAX                  0.000607  \n",
-      "symmetry_MAX                        0.000601  \n",
-      "fractal_dimension_MAX               0.000326  \n",
-      "\n",
-      "[31 rows x 31 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.cov())"
    ]
   },
   {
