Re-Organized Repository

--- a/Code/WDB/Data_Analysis/PCA.ipynb
+++ b/Code/WDB/Data_Analysis/PCA.ipynb
@@ -24,7 +24,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
     "                   {'M':'Malignant' ,'B':'Benign'})"
