--- a/Code/HFDB/Data_Analysis/PCA.ipynb
+++ b/Code/HFDB/Data_Analysis/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -45,10 +45,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd5230f5730>"
+       "<matplotlib.legend.Legend at 0x7f9ff8df8670>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
