--- a/Code/Data_Generation/creatingMultiplePatients.ipynb
+++ b/Code/Data_Generation/creatingMultiplePatients.ipynb
@@ -46,8 +46,8 @@
    "outputs": [],
    "source": [
     "arr2D = df.to_numpy()\n",
-    "columnIndex = 1\n",
-    "sortedArr = arr2D[arr2D[:,columnIndex].argsort()]\n",
+    "columnIndex = -1\n",
+    "sortedArr = arr2D[arr2D[:,-1].argsort()]\n",
     "numZeros = list(sortedArr[:, 1]).count(0)\n",
     "benignDF, malignantDF = pd.DataFrame(sortedArr[0:numZeros]), pd.DataFrame(sortedArr[numZeros:])\n",
     "benignDF.columns = cols\n",
@@ -157,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.7.13 ('mask_rcnn': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -171,12 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a21a4d8430ca198249bdb796151de090f5777c48c0e324da81ff190d429db2a2"
+    "hash": "be63c3ded413d13941d2bcea5196def5912f8ddb476b77fb8a36d1d24a59f0c5"
    }
   }
  },
