--- a/Code/Wole-Paper1/augmentationImbalnceF1.ipynb
+++ b/Code/Wole-Paper1/augmentationImbalnceF1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import VotingClassifier\n",
     "import warnings #to remove the warnings\n",
     "import random\n",
     "import sys\n",
@@ -35,7 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainF1CrossValModels(X, y, numFolds):\n",
+    "    nb = GaussianNB()\n",
+    "    nbScores = cross_val_score(nb, X, y, cv=numFolds, scoring='f1')\n",
+    "    print('Completed Naive Bayes')\n",
+    "    logisticClassifier = LogisticRegression()\n",
+    "    logScores = cross_val_score(logisticClassifier, X, y, cv=numFolds, scoring='f1')\n",
+    "    print('Completed Logistic Regression')\n",
+    "    svclassifier = SVC(kernel='linear', max_iter = 5000000)\n",
+    "    svmScores = cross_val_score(svclassifier, X, y, cv=numFolds, scoring='f1')\n",
+    "    print('Completed SVM')\n",
+    "    clf = DecisionTreeClassifier(random_state = 42)\n",
+    "    dtScrores = cross_val_score(clf, X, y, cv=numFolds, scoring='f1')\n",
+    "    print('Completed Decision Tree')\n",
+    "    votingCl = VotingClassifier(\n",
+    "                estimators =    [('gnb', GaussianNB()),\n",
+    "                                ('lr',  LogisticRegression()),\n",
+    "                                ('svm', SVC(kernel='linear', max_iter = 5000000)),\n",
+    "                                ('dtc', DecisionTreeClassifier(random_state=42))], \n",
+    "                voting='hard')\n",
+    "    voteScores = cross_val_score(votingCl, X, y, cv=numFolds, scoring='f1')\n",
+    "    print('Completed Voting Classification')\n",
+    "    return nbScores, logScores, svmScores, dtScrores, voteScores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,37 +75,22 @@
      "output_type": "stream",
      "text": [
       "(683, 11)\n",
-      "          ID Thickness SizeUniformity ShapeUniformity Adhesion Size  \\\n",
-      "0    1000025         5              1               1        1    2   \n",
-      "1    1002945         5              4               4        5    7   \n",
-      "2    1015425         3              1               1        1    2   \n",
-      "3    1016277         6              8               8        1    3   \n",
-      "4    1017023         4              1               1        3    2   \n",
-      "..       ...       ...            ...             ...      ...  ...   \n",
-      "678   776715         3              1               1        1    3   \n",
-      "679   841769         2              1               1        1    2   \n",
-      "680   888820         5             10              10        3    7   \n",
-      "681   897471         4              8               6        4    3   \n",
-      "682   897471         4              8               8        5    4   \n",
-      "\n",
-      "     BareNuclei Bland Chromatin Nucleoli Mitoses Diagnosis  \n",
-      "0             1               3        1       1         0  \n",
-      "1            10               3        2       1         0  \n",
-      "2             2               3        1       1         0  \n",
-      "3             4               3        7       1         0  \n",
-      "4             1               3        1       1         0  \n",
-      "..          ...             ...      ...     ...       ...  \n",
-      "678           2               1        1       1         0  \n",
-      "679           1               1        1       1         0  \n",
-      "680           3               8       10       2         1  \n",
-      "681           4              10        6       1         1  \n",
-      "682           5              10        4       1         1  \n",
-      "\n",
-      "[683 rows x 11 columns]\n"
+      "Completed Naive Bayes\n",
+      "Completed Logistic Regression\n",
+      "Completed SVM\n",
+      "Completed Decision Tree\n",
+      "Completed Voting Classification\n",
+      "NB Mean Scores: 0.648816995724973\n",
+      "LR Mean Scores: 0.0\n",
+      "SVM Mean Scores: 0.21516111007636432\n",
+      "DT Mean Scores: 0.9160888540365658\n",
+      "VC Mean Scores: 0.16585365853658537\n"
      ]
     }
    ],
    "source": [
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
     "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
     "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
     "raw_df.columns = cols\n",
@@ -88,10 +105,80 @@
     "df = pd.DataFrame(np.array(temp), columns=cols)\n",
     "df['BareNuclei'] = df['BareNuclei'].astype(np.int)\n",
     "print(df.shape)\n",
-    "print(df)\n",
     "\n",
     "for i in df:\n",
-    "    df[i] = df[i].astype(np.int)\n"
+    "    df[i] = df[i].astype(np.int)\n",
+    "\n",
+    "\n",
+    "X = df[cols[:-4]]\n",
+    "y = df[cols[-1]]\n",
+    "rawNB, rawLog, rawSVM, rawlDT, rawVote = trainF1CrossValModels(X, y, 5)\n",
+    "\n",
+    "print('NB Mean Scores: {}'.format(np.mean(rawNB)))\n",
+    "print('LR Mean Scores: {}'.format(np.mean(rawLog)))\n",
+    "print('SVM Mean Scores: {}'.format(np.mean(rawSVM)))\n",
+    "print('DT Mean Scores: {}'.format(np.mean(rawlDT)))\n",
+    "print('VC Mean Scores: {}'.format(np.mean(rawVote)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(683, 11)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "trainF1CrossValModels() missing 1 required positional argument: 'numFolds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d6/w5lhymqx5t54lp1mlcl9tvqc0000gn/T/ipykernel_8344/3226810391.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfinalDataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfinalDataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfinalDataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfinalDataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0maugNBWBC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maugLogWBC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maugSVMWBC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauglDTWBC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maugVoteWBC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainF1CrossValModels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'NB Mean Scores: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maugNBWBC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: trainF1CrossValModels() missing 1 required positional argument: 'numFolds'"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
+    "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
+    "raw_df.columns = cols\n",
+    "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
+    "                   {2:0,4:1})\n",
+    "\n",
+    "temp = []\n",
+    "for index, row in raw_df.iterrows():\n",
+    "    if '?' not in row.values:\n",
+    "        temp.append(row)\n",
+    "        \n",
+    "df = pd.DataFrame(np.array(temp), columns=cols)\n",
+    "df['BareNuclei'] = df['BareNuclei'].astype(np.int)\n",
+    "print(df.shape)\n",
+    "\n",
+    "for i in df:\n",
+    "    df[i] = df[i].astype(np.int)\n",
+    "\n",
+    "X = df[cols[:-4]]\n",
+    "y = df[cols[-1]]\n",
+    "\n",
+    "finalDataset = generateSyntheticDataset(X, y, identical = True)\n",
+    "X = finalDataset[finalDataset.columns[:-1]]\n",
+    "y = finalDataset[finalDataset.columns[-1]]\n",
+    "augNBWBC, augLogWBC, augSVMWBC, auglDTWBC, augVoteWBC = trainF1CrossValModels(X, y, 5)\n",
+    "\n",
+    "print('NB Mean Scores: {}'.format(np.mean(augNBWBC)))\n",
+    "print('LR Mean Scores: {}'.format(np.mean(augLogWBC)))\n",
+    "print('SVM Mean Scores: {}'.format(np.mean(augSVMWBC)))\n",
+    "print('DT Mean Scores: {}'.format(np.mean(auglDTWBC)))\n",
+    "print('VC Mean Scores: {}'.format(np.mean(augVoteWBC)))"
    ]
   },
   {
@@ -132,7 +219,7 @@
     "for i in range(10):\n",
     "    X = df[cols[1:-1]]\n",
     "    y = df[cols[-1]]\n",
-    "\n",
+    "    \n",
     "    SEED = 42 + i\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=SEED)\n",
     "    finalDataset = generateSyntheticDataset(X_train, y_train, identical = True)\n",
