Re-organzied code and fixed validation code

--- a/Code/Wole-Paper1/finalVersions/augmentationImbalnceF1CrossVal.ipynb
+++ b/Code/Wole-Paper1/finalVersions/augmentationImbalnceF1CrossVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import warnings #to remove the warnings\n",
     "import random\n",
     "import sys\n",
-    "sys.path.append('../_hepers_')\n",
+    "sys.path.append('../../_hepers_')\n",
     "from genNewVals import generateNewFeatureValMultiple\n",
     "from subsampleData import subsample\n",
     "from models import trainModels\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
     "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
     "raw_df.columns = cols\n",
     "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
     "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
     "raw_df.columns = cols\n",
     "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
     "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
     "raw_df.columns = cols\n",
     "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
     "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
     "raw_df.columns = cols\n",
     "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
     "cols = ['ID', 'Diagnosis', 'radius', 'texture', 'perimeter', 'area', 'smoothness', 'compactness', 'concavity', 'concave_points', 'symmetry', 'fractal_dimension',\n",
     "        'radius_SE', 'texture_SE', 'perimeter_SE', 'area_SE', 'smoothness_SE', 'compactness_SE', 'concavity_SE', 'concave_points_SE', 'symmetry_SE', 'fractal_dimension_SE',\n",
     "        'radius_MAX', 'texture_MAX', 'perimeter_MAX', 'area_MAX', 'smoothness_MAX', 'compactness_MAX', 'concavity_MAX', 'concave_points_MAX', 'symmetry_MAX', 'fractal_dimension_MAX']\n",
-    "df = pd.read_csv('../../Wisconsin_Database/wdbc.data', header=None)\n",
+    "df = pd.read_csv('../../../Wisconsin_Database/wdbc.data', header=None)\n",
     "\n",
     "df.columns = cols\n",
     "df['Diagnosis'] = df['Diagnosis'].map(\n",
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1418,12 +1418,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8 (main, Nov 10 2021, 03:48:35) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a21a4d8430ca198249bdb796151de090f5777c48c0e324da81ff190d429db2a2"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
