--- a/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
+++ b/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,12 @@
     "warnings.filterwarnings('ignore')\n",
     "from imblearn.over_sampling import SMOTE \n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "from numpy.random import randint\n",
-    "import math\n",
-    "\n",
-    "\n",
-    "\n"
+    "from sklearn.impute import SimpleImputer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,36 +120,79 @@
     "    print(' - Malignant:')\n",
     "    print('   -   New Malignant Instances Created: {}'.format(numMaligNeeded))\n",
     "    print('   -   Old Malignant Instances Used: {}'.format(preExistingMalig.shape[0]))\n",
-    "    return finalDataset"
+    "    return finalDataset\n",
+    "\n",
+    "def printOutputs(naiveBayesScore, LogScore, SVMScore, DTScore, VoteScore):\n",
+    "    print('NB Mean Scores: {}'.format(np.mean(naiveBayesScore)))\n",
+    "    print('LR Mean Scores: {}'.format(np.mean(LogScore)))\n",
+    "    print('SVM Mean Scores: {}'.format(np.mean(SVMScore)))\n",
+    "    print('DT Mean Scores: {}'.format(np.mean(DTScore)))\n",
+    "    print('VC Mean Scores: {}'.format(np.mean(VoteScore)))\n",
+    "\n",
+    "def printDataComposition(X_train, y_train):\n",
+    "    trainingSet = X_train.copy()\n",
+    "    trainingSet['Diagnosis'] = y_train\n",
+    "    arr2D = trainingSet.to_numpy()\n",
+    "    columnIndex = -1\n",
+    "    sortedArr = arr2D[arr2D[:,columnIndex].argsort()]\n",
+    "    numZeros = list(sortedArr[:, columnIndex]).count(0)\n",
+    "    benignDF, malignantDF = pd.DataFrame(sortedArr[0:numZeros]), pd.DataFrame(sortedArr[numZeros:])\n",
+    "    benignDF.columns, malignantDF.columns = trainingSet.columns, trainingSet.columns\n",
+    "\n",
+    "    #Reporting Summary\n",
+    "    print(' - Benign Instances: {}'.format(benignDF.shape[0]))\n",
+    "    print(' - Malignant Instances: {}'.format(malignantDF.shape[0]))\n",
+    "\n",
+    "def genRandomReplaceIndex(numEntries, lastDataColumn):\n",
+    "    return randint(0, numEntries), randint(0, lastDataColumn+1)\n",
+    "\n",
+    "def meanImputationByClass(X_train, y_train):\n",
+    "    trainingSet = X_train.copy()\n",
+    "    trainingSet['Diagnosis'] = y_train\n",
+    "    arr2D = trainingSet.to_numpy()\n",
+    "    columnIndex = -1\n",
+    "    sortedArr = arr2D[arr2D[:,columnIndex].argsort()]\n",
+    "    numZeros = list(sortedArr[:, columnIndex]).count(0)\n",
+    "    benignDF, malignantDF = pd.DataFrame(sortedArr[0:numZeros]), pd.DataFrame(sortedArr[numZeros:])\n",
+    "    benignDF.columns, malignantDF.columns = trainingSet.columns, trainingSet.columns\n",
+    "    print('Benign: {}, Benign w/o Nulls: {}'.format(benignDF.shape, benignDF.dropna().shape))\n",
+    "    print('Malig: {}, Malig w/o Nulls: {}'.format(malignantDF.shape, malignantDF.dropna().shape))\n",
+    "    bening_imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "    bening_imputer = bening_imputer.fit(benignDF)\n",
+    "    benignDF = bening_imputer.transform(benignDF)\n",
+    "\n",
+    "    malig_imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "    malig_imputer = malig_imputer.fit(malignantDF)\n",
+    "    malignantDF = malig_imputer.transform(malignantDF)\n",
+    "    jointArray = np.vstack((benignDF,malignantDF))\n",
+    "    return jointArray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(683, 11)\n",
-      "Final Dataset Composition: (888, 10)\n",
-      " - Benign:\n",
-      "   -   New Benign Instances Created: 0\n",
-      "   -   Old Benign Instances Used: 444\n",
-      " - Malignant:\n",
-      "   -   New Malignant Instances Created: 414\n",
-      "   -   Old Malignant Instances Used: 30\n",
+      "(699, 10)\n",
+      "(683, 10)\n",
+      "(699, 10)\n",
+      "(547, 10)\n",
+      "Benign: (452, 10), Benign w/o Nulls: (358, 10)\n",
+      "Malig: (247, 10), Malig w/o Nulls: (189, 10)\n",
       "Completed Naive Bayes\n",
       "Completed Logistic Regression\n",
       "Completed SVM\n",
       "Completed Decision Tree\n",
       "Completed Voting Classification\n",
-      "NB Mean Scores: 0.9772022263574929\n",
-      "LR Mean Scores: 0.9834149600098087\n",
-      "SVM Mean Scores: 0.9834149600098087\n",
-      "DT Mean Scores: 0.9607978977544196\n",
-      "VC Mean Scores: 0.9834149600098087\n"
+      "NB Mean Scores: 0.9397058260292661\n",
+      "LR Mean Scores: 0.94219840998379\n",
+      "SVM Mean Scores: 0.9432414975273901\n",
+      "DT Mean Scores: 0.9072802610405863\n",
+      "VC Mean Scores: 0.9445110834342987\n"
      ]
     }
    ],
@@ -165,38 +204,139 @@
     "raw_df.columns = cols\n",
     "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
     "                   {2:0,4:1})\n",
-    "\n",
     "temp = []\n",
     "for index, row in raw_df.iterrows():\n",
     "    if '?' not in row.values:\n",
     "        temp.append(row)\n",
+    "    else:\n",
+    "        temp.append(row.replace('?', np.nan))\n",
+    "\n",
     "        \n",
     "df = pd.DataFrame(np.array(temp), columns=cols)\n",
-    "df['BareNuclei'] = df['BareNuclei'].astype(np.int)\n",
+    "df = df[cols[1:]]\n",
     "print(df.shape)\n",
-    "\n",
-    "for i in df:\n",
-    "    df[i] = df[i].astype(np.int)\n",
-    "\n",
+    "print(df.dropna().shape)\n",
+    "numEntriesNeedingNulls = math.floor(df.shape[0] * 0.25)\n",
+    "numEntriesWithNulls = df.shape[0] - df.dropna().shape[0]\n",
+    "array = np.array(df)\n",
+    "for i in range(numEntriesNeedingNulls - numEntriesWithNulls):\n",
+    "    x_index, y_index = genRandomReplaceIndex(array.shape[0], array.shape[1] - 1)\n",
+    "    array[x_index][y_index] = np.nan\n",
+    "df = pd.DataFrame(array, columns = cols[1:])\n",
+    "print(df.shape)\n",
+    "print(df.dropna().shape)\n",
     "\n",
     "X = df[cols[1:-1]]\n",
     "y = df[cols[-1]]\n",
-    "subSample = pd.DataFrame(subsample(X, y, 20000, 30))\n",
-    "X = subSample[subSample.columns[:-1]]\n",
-    "y = subSample[subSample.columns[-1]]\n",
-    "numClassSamples = len(y) - sum(y)\n",
-    "finalDataset = generateSupplementalData(X, y, numBenign = numClassSamples, numMalig = numClassSamples)\n",
+    "\n",
+    "finalDataset = pd.DataFrame(meanImputationByClass(X, y))\n",
+    "finalDataset.columns = cols[1:]\n",
+    "\n",
+    "for i in finalDataset:\n",
+    "    finalDataset[i] = finalDataset[i].astype(np.int)\n",
     "\n",
     "X = finalDataset[finalDataset.columns[:-1]]\n",
     "y = finalDataset[finalDataset.columns[-1]]\n",
-    "augNBWBC, augLogWBC, augSVMWBC, auglDTWBC, augVoteWBC = trainF1CrossValModels(X, y, 10)\n",
     "\n",
     "\n",
-    "print('NB Mean Scores: {}'.format(np.mean(augNBWBC)))\n",
-    "print('LR Mean Scores: {}'.format(np.mean(augLogWBC)))\n",
-    "print('SVM Mean Scores: {}'.format(np.mean(augSVMWBC)))\n",
-    "print('DT Mean Scores: {}'.format(np.mean(auglDTWBC)))\n",
-    "print('VC Mean Scores: {}'.format(np.mean(augVoteWBC)))"
+    "meanNBWBC, meanLogWBC, meanSVMWBC, meanDTWBC, meanVoteWBC = trainF1CrossValModels(X, y, 10)\n",
+    "printOutputs(meanNBWBC, meanLogWBC, meanSVMWBC, meanDTWBC, meanVoteWBC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(699, 10)\n",
+      "(683, 10)\n",
+      "(699, 10)\n",
+      "(547, 10)\n",
+      "Completed Naive Bayes\n",
+      "Completed Logistic Regression\n",
+      "Completed SVM\n",
+      "Completed Decision Tree\n",
+      "Completed Voting Classification\n",
+      "NB Mean Scores: 0.9520221520028965\n",
+      "LR Mean Scores: 0.9527846351338006\n",
+      "SVM Mean Scores: 0.9556186432309666\n",
+      "DT Mean Scores: 0.9347149027025189\n",
+      "VC Mean Scores: 0.9527846351338006\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
+    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
+    "raw_df.columns = cols\n",
+    "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
+    "                   {2:0,4:1})\n",
+    "temp = []\n",
+    "for index, row in raw_df.iterrows():\n",
+    "    if '?' not in row.values:\n",
+    "        temp.append(row)\n",
+    "    else:\n",
+    "        temp.append(row.replace('?', np.nan))\n",
+    "\n",
+    "        \n",
+    "df = pd.DataFrame(np.array(temp), columns=cols)\n",
+    "df = df[cols[1:]]\n",
+    "print(df.shape)\n",
+    "print(df.dropna().shape)\n",
+    "numEntriesNeedingNulls = math.floor(df.shape[0] * 0.25)\n",
+    "numEntriesWithNulls = df.shape[0] - df.dropna().shape[0]\n",
+    "array = np.array(df)\n",
+    "for i in range(numEntriesNeedingNulls - numEntriesWithNulls):\n",
+    "    x_index, y_index = genRandomReplaceIndex(array.shape[0], array.shape[1] - 1)\n",
+    "    array[x_index][y_index] = np.nan\n",
+    "df = pd.DataFrame(array, columns = cols[1:])\n",
+    "print(df.shape)\n",
+    "print(df.dropna().shape)\n",
+    "finalDataset = df.dropna()\n",
+    "\n",
+    "for i in finalDataset:\n",
+    "    finalDataset[i] = finalDataset[i].astype(np.int)\n",
+    "\n",
+    "X = finalDataset[finalDataset.columns[:-1]]\n",
+    "y = finalDataset[finalDataset.columns[-1]]\n",
+    "\n",
+    "\n",
+    "removeNBWBC, removeLogWBC, removeSVMWBC, removeDTWBC, removeVoteWBC = trainF1CrossValModels(X, y, 10)\n",
+    "printOutputs(removeNBWBC, removeLogWBC, removeSVMWBC, removeDTWBC, removeVoteWBC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NB Mean Scores: 0.9520221520028965\n",
+      "LR Mean Scores: 0.9527846351338006\n",
+      "SVM Mean Scores: 0.9556186432309666\n",
+      "DT Mean Scores: 0.9347149027025189\n",
+      "VC Mean Scores: 0.9527846351338006\n",
+      "NB Mean Scores: 0.9520221520028965\n",
+      "LR Mean Scores: 0.9527846351338006\n",
+      "SVM Mean Scores: 0.9556186432309666\n",
+      "DT Mean Scores: 0.9347149027025189\n",
+      "VC Mean Scores: 0.9527846351338006\n"
+     ]
+    }
+   ],
+   "source": [
+    "printOutputs(removeNBWBC, removeLogWBC, removeSVMWBC, removeDTWBC, removeVoteWBC)\n",
+    "print('-'*30)\n",
+    "printOutputs(meanNBWBC, meanLogWBC, meanSVMWBC, meanDTWBC, meanVoteWBC)"
    ]
   },
   {
@@ -1563,7 +1703,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1577,12 +1717,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8 (main, Nov 10 2021, 03:48:35) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "a21a4d8430ca198249bdb796151de090f5777c48c0e324da81ff190d429db2a2"
    }
   }
  },
